<resources>
    <string name="app_name">GardenOS</string>
    <string name="connectToDevice">Połącz się z urządzeniem</string>
    <string name="settings">Ustawienia</string>
    <string name="cannotConnectWarning">Nie można połączyć się z urządzeniem</string>
    <string name="refresh">Odśwież</string>
    <string name="disconnectString">ROZŁĄCZ</string>
    <string name="testString">test</string>
    <string name="connectString">POŁĄCZ</string>
    <string name="dateStartIrrigationText">Wybierz date rozpoczęcia podlewania</string>
    <string name="timeStartIrrigationText">Wybierz czas rozpoczęcia podlewania</string>
    <string name="stopDateIrrigationText">Wybierz date zakończenia podlewania</string>
    <string name="stopTimeIrrigationText">Wybierz czas zakończenia podlewania</string>
    <string name="setIrrigationText">Zaplanuj podlewanie</string>
    <string name="settingsText">Ustawienia</string>
    <string name="plannedIrrigationText">Planowane podlewanie</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--  Sensors amount  -->
    <string-array name="sensors_amonut">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="sensors_amount_title">Liczba czujników</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>