<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlannedActivity"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateStartIrrigationText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:padding="10dp"
                />

            <DatePicker
                android:id="@+id/irrigationDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeStartIrrigationText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:padding="10dp"
                />

            <TimePicker
                android:id="@+id/startIrrigationPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopDateIrrigationText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:padding="10dp"
                />

            <DatePicker
                android:id="@+id/stopIrrigationDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopTimeIrrigationText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:padding="10dp"
                />

            <TimePicker
                android:id="@+id/stopIrrigationPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_gravity="center_horizontal"

                />

            <Button
                android:id="@+id/setIrrigationDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/setIrrigationText"
                android:textSize="20sp"
                />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>