<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CyclicActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/cyclicDayHeaderText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <CheckBox
                android:id="@+id/mondayCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Poniedziałek" />

            <CheckBox
                android:id="@+id/tuesdeyCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wtorek" />

            <CheckBox
                android:id="@+id/wednesdeyCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Środa" />

            <CheckBox
                android:id="@+id/thursdayCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Czwartek" />

            <CheckBox
                android:id="@+id/fridayCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Piątek" />

            <CheckBox
                android:id="@+id/saturdayCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sobota" />

            <CheckBox
                android:id="@+id/sundayCyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Niedziela" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/timeStartIrrigationText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TimePicker
                android:id="@+id/startCyclicIrrigationPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/stopTimeIrrigationText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TimePicker
                android:id="@+id/stopCyclicIrrigationPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/setIrrigationDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/setIrrigationText"
                android:textSize="20sp"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>